# itsme4

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/itsme/amkush/ipc/: ISurfaceInjector.aidl
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  activation.cpp  ffmpeg_decoder.cpp  frame_producer.cpp  swscale_wrapper.cpp
app/src/main/cpp/license/: license_client.cpp  license_client.h  sha256.h
app/src/main/java/com/itsme/amkush/: AppState.kt  CameraState.kt  FaceGateApplication.kt  MainHook.kt
app/src/main/java/com/itsme/amkush/ffmpeg/: FFmpegDecoder.kt
app/src/main/java/com/itsme/amkush/hooks/: AntiXposedHooks.kt  Camera1Hooks.kt  Camera2Hooks.kt  CameraXHooks.kt  ClonerBypassHooks.kt  ConfigUpdateReceiver.kt  DenyListHooks.kt  DeviceSpoofHooks.kt  EmulatorBypassHooks.kt  ExifSpoofHooks.kt  FakeCameraObjects.kt  InjectionServiceClient.kt  IntentCaptureHooks.kt  NativeFrameProducer.kt  RootBypassHooks.kt  SELinuxBypassHooks.kt  SocketFrameReceiver.kt
app/src/main/java/com/itsme/amkush/ipc/: FaceGateIpcProvider.kt  RemoteConfig.kt  UnixSocketServer.kt
app/src/main/java/com/itsme/amkush/libyuv/: JniBridge.kt
app/src/main/java/com/itsme/amkush/license/: LicenseClient.kt
app/src/main/java/com/itsme/amkush/model/: AppInfo.kt  HookState.kt  HookStatus.kt  StreamConfig.kt
app/src/main/java/com/itsme/amkush/network/: ApiClient.kt  ApiService.kt  Response.kt
app/src/main/java/com/itsme/amkush/network/models/: ValidateRequest.kt  ValidateResponse.kt
app/src/main/java/com/itsme/amkush/router/: FpsPacer.kt  ImageLoopSource.kt  SurfaceRouter.kt
app/src/main/java/com/itsme/amkush/security/: LicenseGuard.kt
app/src/main/java/com/itsme/amkush/services/: InjectionService.kt
app/src/main/java/com/itsme/amkush/ui/: HomeScreen.kt  HomeViewModel.kt  PaymentScreen.kt  SplashScreenActivity.kt  StreamPreviewDialog.kt  TabsScreen.kt
app/src/main/java/com/itsme/amkush/ui/adapter/: ViewPagerAdapter.kt
app/src/main/java/com/itsme/amkush/ui/fragments/: DenyListFragment.kt  DeviceSpoofFragment.kt  HomeFragment.kt  MediaFragment.kt  StatsFragment.kt  StreamSetupFragment.kt
app/src/main/java/com/itsme/amkush/utils/: DeviceUtils.kt  FileLoggingTree.kt  Logger.kt  SharedPrefs.kt
app/src/main/res/anim/: checkmark_draw.xml
app/src/main/res/drawable/: brand_chip_background.xml  button_gradient.xml  button_gradient_green.xml  button_gradient_red.xml  dialog_preview_background.xml  ic_alert.xml  ic_check_circle.xml  ic_check_circle_outline.xml  ic_checkmark_animated.xml  ic_checkmark_green.xml  ic_injection_indicator.xml  ic_launcher.xml  ic_media.xml  ic_notification.xml  ic_settings.xml  ic_shield.xml  ic_stats.xml  ic_stream.xml  input_background.xml  item_app_background.xml  item_denied_background.xml  search_background.xml  stats_card_background.xml  target_card_background.xml
app/src/main/res/layout/: fragment_deny_list.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: network_security_config.xml
zygisk-module/: customize.sh  module.prop  sepolicy.rule  service.sh
zygisk-module/jni/: CMakeLists.txt  crash_guard.cpp  crash_guard.h  frame_inject.cpp  frame_inject.h  frame_source.cpp  frame_source.h  hook_proxy.cpp  hook_proxy.h  ipc_socket.cpp  ipc_socket.h  main.cpp  stream_map.cpp  stream_map.h  symbol_resolver.cpp  symbol_resolver.h  zygisk.hpp
zygisk-module/jni/include/: camera3_compat.h  shadowhook.h
zygisk-module/jni/license/: license_client.cpp  license_client.h
